Reworked underlying database implementation and savable Also added some advancement classes
Signed-off-by: Ivo Quiring <falk.quiring@gmail.com>